# SAFFRON

./: README.md  pyproject.toml
notebooks/: demo.ipynb
notebooks/data/: colorectal_novae_demo.npz  colorectal_novae_train_sae.npz
saffron/: __init__.py  correlate.py  omp.py  sae.py  saffron.py  utils.py
