[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saffron-sae"
version = "0.1.0"
description = "SAFFRON: a Sparse Autoencoder Framework For Representing Omics Natural variation — a mechanistic interpretability framework for spatial foundation model embeddings."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "torch>=2.0",
]

[project.optional-dependencies]
io = ["anndata>=0.9"]
demo = ["anndata>=0.9", "matplotlib>=3.5", "statsmodels>=0.14", "jupyter", "ipykernel"]

[tool.setuptools.packages.find]
include = ["saffron*"]
